--- a/GroupID__COMP90042_Project_2025.ipynb
+++ b/GroupID__COMP90042_Project_2025.ipynb
@@ -110,7 +110,7 @@
       "outputs": [],
       "source": [
         "# ---------- 3. 构建 BM25 索引 ----------\n",
-        "bm25 = BM25Okapi(token_corpus, k1=1.5, b=0.75)"
+        "bm25 = BM25Okapi(token_corpus, k1=1.75, b=0.75)"
       ]
     },
     {
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -295,7 +295,7 @@
       "source": [
         "import json\n",
         "def build_prompt_with_example(json_path: str) -> str:\n",
-        "    # 1. few‐shot 示例\n",
+        "    # few‐shot\n",
         "    example = {\n",
         "        \"claim-2152\": {\n",
         "            \"claim_text\": \"Venus doesn't have a runaway greenhouse effect\",\n",
@@ -314,12 +314,11 @@
         "        }\n",
         "    }\n",
         "\n",
-        "    # 2. 读取 test‐claims-top6-text.json 并取第一条\n",
         "    with open(json_path, 'r', encoding='utf-8') as f:\n",
         "        data = json.load(f)\n",
         "    test_claim_id, test_claim = next(iter(data.items()))\n",
         "    \n",
-        "    # 3. 拼接 prompt\n",
+        "    # prompt\n",
         "    prompt_lines = []\n",
         "    prompt_lines.append(\"You are a fact-checking assistant. \"\n",
         "                 \"For the given Claim and Candidate Evidences, \"\n",
@@ -348,24 +347,6 @@
         "if __name__ == \"__main__\":\n",
         "    prompt = build_prompt_with_example('./data/test-claims-top6-text.json')\n",
         "    print(prompt)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 33,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Prompt 字符数：1813\n"
-          ]
-        }
-      ],
-      "source": [
-        "char_len = len(prompt)\n",
-        "print(f\"Prompt 字符数：{char_len}\")"
       ]
     },
     {
