--- a/cross-encoder.ipynb
+++ b/cross-encoder.ipynb
@@ -149,7 +149,7 @@
     "import numpy as np\n",
     "from sklearn.metrics import f1_score\n",
     "\n",
-    "# 1. 转成 HF Dataset\n",
+    "# 1. HF Dataset\n",
     "train_ds = Dataset.from_list(train_pairs)\n",
     "dev_ds   = Dataset.from_list(dev_pairs)\n",
     "\n",
@@ -209,7 +209,6 @@
     "    compute_metrics=compute_metrics,\n",
     ")\n",
     "\n",
-    "# 7. 训练\n",
     "trainer.train()"
    ]
   },
