BM25->Cross Encoder->LLM

--- a/61__COMP90042_Project_2025.ipynb
+++ b/61__COMP90042_Project_2025.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -83,7 +83,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 10,
       "metadata": {
         "id": "qvff21Hv8zjk"
       },
@@ -110,9 +110,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**Data clean**\n",
+        "### Data clean\n",
         "\n",
-        "remove unicode and keep words and alphanumerics"
+        "remove unicode and keep words and numbers"
       ]
     },
     {
@@ -225,60 +225,16 @@
       "metadata": {},
       "source": [
         "### Cross-Encoder Reranker\n",
-        "Reads top-100 candidates per claim, re-scores them with a pretrained CrossEncoder, and emits the top-M evidences in both ID form and full-text form."
+        "Reads top-100 candidates per claim, re-scores them with a pretrained CrossEncoder, and emits the top-M evidences in both ID form and full-text form.\n",
+        "\n",
+        "The full-text form will be used for prompt building"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[dev] Loading top-100 lists…\n",
-            "[dev] Reranking with Cross-Encoder…\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "dev split: 100%|██████████| 154/154 [00:16<00:00,  9.54it/s]\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[dev] → wrote dev-claims-top6-dense-ce.json and dev-claims-top6-text-ce.json\n",
-            "[test] Loading top-100 lists…\n",
-            "[test] Reranking with Cross-Encoder…\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "test split: 100%|██████████| 153/153 [00:16<00:00,  9.36it/s]"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[test] → wrote test-claims-top6-dense-ce.json and test-claims-top6-text-ce.json\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# ---------- Config ----------\n",
         "DATA_DIR   = Path(\"data\")\n",
@@ -372,6 +328,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Model Config && Few-shot Example"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -387,7 +350,7 @@
         "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
         "\n",
         "# ———— Config ————\n",
-        "TEST_CLAIMS_FILE = './data2/test-claims-top10-text-ce.json'\n",
+        "TEST_CLAIMS_FILE = './data/test-claims-top10-text-ce.json'\n",
         "RESULTS_FILE     = 'results.json'\n",
         "CHECKPOINT_FILE  = 'checkpoint.json'\n",
         "MODEL_NAME       = 'deepseek-ai/DeepSeek-R1-Distill-Qwen-7B'\n",
@@ -434,7 +397,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# ———— Helpers ————\n",
+        "# Helper function\n",
         "def load_json(path, default):\n",
         "    if os.path.isfile(path):\n",
         "        with open(path, 'r', encoding='utf-8') as f:\n",
@@ -447,7 +410,7 @@
         "\n",
         "def build_prompt(claim_id, claim_obj):\n",
         "    lines = []\n",
-        "    # system/user instruction\n",
+        "    # user instruction\n",
         "    lines.append(\n",
         "        \"You are a fact-checking assistant. \"\n",
         "        \"For the given Claim and Candidate Evidences, determine the correct Claim Label \"\n",
