add some comment in code file; remove unnecessary data file

--- a/61__COMP90042_Project_2025.ipynb
+++ b/61__COMP90042_Project_2025.ipynb
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
@@ -80,6 +80,13 @@
         "\n",
         "STOP = set(stopwords.words(\"english\"))\n",
         "STEM = PorterStemmer().stem"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load evidence.json"
       ]
     },
     {
@@ -155,21 +162,21 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### BM25 Retrieval\n",
+        "### Tokenization\n",
         "\n",
-        "Use BM25 for first stage evidence retrieval, generate top-100 evidences from evidence.json"
+        "Tokenize evidence.json, and do some data analysis"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Tokenize: 100%|██████████| 1208827/1208827 [04:17<00:00, 4701.09it/s]\n"
+            "Tokenize: 100%|██████████| 1208827/1208827 [04:09<00:00, 4838.80it/s]\n"
           ]
         }
       ],
@@ -184,9 +191,14 @@
         "analyzer = cv.build_analyzer()\n",
         "\n",
         "# TOKEN\n",
-        "token_corpus = [analyzer(doc) for doc in tqdm(raw_texts, desc=\"Tokenize\")]\n",
-        "\n",
-        "bm25 = BM25Okapi(token_corpus, k1=1.2, b=0.75)"
+        "token_corpus = [analyzer(doc) for doc in tqdm(raw_texts, desc=\"Tokenize\")]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Token Length Distribution"
       ]
     },
     {
@@ -243,30 +255,73 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Train Label Distribution"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1208827\n"
+            "             Label  Count  Percentage (%)\n",
+            "0         SUPPORTS    519           42.26\n",
+            "1  NOT_ENOUGH_INFO    386           31.43\n",
+            "2          REFUTES    199           16.21\n",
+            "3         DISPUTED    124           10.10\n"
           ]
         }
       ],
       "source": [
-        "print(len(token_corpus))"
+        "import pandas as pd\n",
+        "import ujson\n",
+        "from pathlib import Path\n",
+        "\n",
+        "DATA_DIR   = Path(\"data\")\n",
+        "with open(DATA_DIR / \"train-claims.json\", \"r\", encoding=\"utf-8\") as f:\n",
+        "    data = ujson.load(f)\n",
+        "\n",
+        "labels = [entry[\"claim_label\"] for entry in data.values() if \"claim_label\" in entry]\n",
+        "\n",
+        "# calcute label distribution\n",
+        "label_counts = pd.Series(labels).value_counts()\n",
+        "label_percentages = (label_counts / label_counts.sum() * 100).round(2)\n",
+        "\n",
+        "label_distribution = pd.DataFrame({\n",
+        "    \"Label\": label_counts.index,\n",
+        "    \"Count\": label_counts.values,\n",
+        "    \"Percentage (%)\": label_percentages.values\n",
+        "})\n",
+        "\n",
+        "\n",
+        "print(label_distribution)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### BM25 Retrieval\n",
+        "\n",
+        "Use BM25 for first stage evidence retrieval, generate top-100 evidences from evidence.json"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
+        "bm25 = BM25Okapi(token_corpus, k1=1.2, b=0.75)\n",
+        "\n",
         "# query claim and return Top-k relevant evidence\n",
-        "def retrieve_topk(claim_text: str, topk: int = 100):\n",
+        "def retrieve_topk(claim_text: str, topk: int = 1000):\n",
         "    query_tokens = analyzer(claim_text)\n",
         "    scores       = bm25.get_scores(query_tokens)\n",
         "    idx_sorted   = np.argsort(scores)[-topk:][::-1]\n",
@@ -293,21 +348,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Retrieve: 100%|██████████| 1228/1228 [4:38:53<00:00, 13.63s/it]  \n"
+            "Retrieve: 100%|██████████| 1228/1228 [1:57:53<00:00,  5.76s/it] \n",
+            "Retrieve: 100%|██████████| 154/154 [15:26<00:00,  6.01s/it]\n",
+            "Retrieve: 100%|██████████| 153/153 [14:37<00:00,  5.73s/it]\n"
           ]
         }
       ],
       "source": [
-        "process_claim_file(\"./data/train-claims.json\", \"./data/train-claims-top100.json\")\n",
-        "# process_claim_file(\"./data/dev-claims.json\", \"./data/dev-claims-top100.json\")\n",
-        "# process_claim_file(\"./data/test-claims-unlabelled.json\", \"./data/test-claims-top100.json\")"
+        "# process_claim_file(\"./data/train-claims.json\", \"./data/train-claims-top1000.json\")\n",
+        "# process_claim_file(\"./data/dev-claims.json\", \"./data/dev-claims-top1000.json\")\n",
+        "# process_claim_file(\"./data/test-claims-unlabelled.json\", \"./data/test-claims-top1000.json\")"
       ]
     },
     {
@@ -315,9 +372,18 @@
       "metadata": {},
       "source": [
         "### Cross-Encoder Reranker\n",
-        "Reads top-100 candidates per claim, re-scores them with a pretrained CrossEncoder, and emits the top-M evidences in both ID form and full-text form.\n",
+        "Read top-100 candidates per claim, re-score them with a pretrained CrossEncoder, and emit the top-M evidences in both ID form and full-text form. Currently, set TOP_M=6\n",
         "\n",
         "The full-text form will be used for prompt building"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Finetune this cross-encoder for better performance in our dataset.\n",
+        "\n",
+        "First, we use top100.json and groundtruth to generate postive/negative label train data."
       ]
     },
     {
@@ -326,85 +392,214 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# ---------- Config ----------\n",
-        "DATA_DIR   = Path(\"data\")\n",
-        "TOP100_FNS = {\n",
-        "    \"train\": \"train-claims-top100.json\",\n",
-        "    \"dev\"  : \"dev-claims-top100.json\",\n",
-        "    \"test\" : \"test-claims-top100.json\"\n",
-        "}\n",
-        "TOP_M      = 6\n",
+        "import json\n",
+        "import ujson\n",
+        "import torch\n",
+        "from pathlib import Path\n",
+        "from sentence_transformers import CrossEncoder, InputExample, losses\n",
+        "from torch.utils.data import DataLoader\n",
+        "from tqdm import tqdm\n",
+        "\n",
+        "# --------- Configuration ---------\n",
+        "DATA_DIR = Path(\"data\")\n",
+        "TRAIN_FN = DATA_DIR / \"train-claims-top100.json\"\n",
+        "DEV_FN = DATA_DIR / \"dev-claims-top100.json\"\n",
+        "TEST_FN = DATA_DIR / \"test-claims-top100.json\"\n",
+        "\n",
         "MODEL_NAME = \"cross-encoder/ms-marco-MiniLM-L-6-v2\"\n",
         "BATCH_SIZE = 32\n",
+        "NUM_EPOCHS = 3\n",
+        "TOP_M = 6\n",
+        "CHECKPOINT_DIR = DATA_DIR / \"checkpoints\"\n",
+        "FINAL_MODEL_DIR = DATA_DIR / \"fine-tuned-model\"\n",
         "\n",
+        "CHECKPOINT_DIR.mkdir(exist_ok=True, parents=True)\n",
+        "FINAL_MODEL_DIR.mkdir(exist_ok=True, parents=True)\n",
         "\n",
-        "# Initialize Cross-Encoder\n",
-        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-        "ce_model = CrossEncoder(MODEL_NAME, device=device)\n",
+        "# --------- Prepare Training Data ---------\n",
+        "def load_claim_texts(path):\n",
+        "    with open(path, encoding='utf-8') as f:\n",
+        "        data = ujson.load(f)\n",
+        "    return {cid: (item[\"claim_text\"] if isinstance(item, dict) else item) for cid, item in data.items()}\n",
+        "def load_groundtruth_evidence(path):\n",
+        "    with open(path, encoding='utf-8') as f:\n",
+        "        data = ujson.load(f)\n",
+        "    gt = {}\n",
+        "    for cid, details in data.items():\n",
+        "        if isinstance(details, dict):\n",
+        "            gt[cid] = set(details.get(\"evidences\", []))\n",
+        "        else:\n",
+        "            gt[cid] = set()\n",
+        "    return gt\n",
         "\n",
-        "# ---------- Process each split ----------\n",
-        "for split, fn in TOP100_FNS.items():\n",
-        "    top100_path = DATA_DIR / fn\n",
-        "    if not top100_path.exists():\n",
-        "        continue\n",
-        "\n",
-        "    print(f\"[{split}] Loading top-100 lists…\")\n",
-        "    with top100_path.open() as f:\n",
+        "def prepare_training_data(top100_path, claims_path, gt_evidence, evidences):\n",
+        "    with open(top100_path, encoding='utf-8') as f:\n",
         "        top100 = ujson.load(f)\n",
+        "    claims = load_claim_texts(claims_path)\n",
         "\n",
-        "    # Load raw claim texts\n",
-        "    cfile = DATA_DIR / f\"{split}-claims.json\"\n",
-        "    with cfile.open() as f:\n",
-        "        raw = ujson.load(f)\n",
-        "    claim_texts = {\n",
-        "        cid: (raw[cid][\"claim_text\"] if isinstance(raw[cid], dict) else raw[cid])\n",
-        "        for cid in raw\n",
-        "    }\n",
+        "    examples = []\n",
+        "    for cid, entry in tqdm(top100.items(), desc=\"Preparing data\"):\n",
+        "        claim = claims.get(cid, \"\")\n",
+        "        cand_ids = entry[\"evidences\"] if isinstance(entry, dict) else entry\n",
+        "        gt_evid = gt_evidence.get(cid, set())\n",
+        "\n",
+        "        for eid in cand_ids:\n",
+        "            label = 1.0 if eid in gt_evid else 0.0\n",
+        "            examples.append(InputExample(texts=[claim, evidences[eid]], label=label))\n",
+        "\n",
+        "    return examples\n",
+        "\n",
+        "# Load evidences\n",
+        "with open(DATA_DIR / \"evidence.json\", encoding='utf-8') as f:\n",
+        "    evid_dict = ujson.load(f)\n",
+        "\n",
+        "# Ground truth evidence\n",
+        "train_gt = load_groundtruth_evidence(DATA_DIR / \"train-claims.json\")\n",
+        "dev_gt = load_groundtruth_evidence(DATA_DIR / \"dev-claims.json\")\n",
+        "\n",
+        "# Training and Dev data\n",
+        "train_examples = prepare_training_data(TRAIN_FN, DATA_DIR / \"train-claims.json\", train_gt, evid_dict)\n",
+        "dev_examples = prepare_training_data(DEV_FN, DATA_DIR / \"dev-claims.json\", dev_gt, evid_dict)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Load model, train data and loss function"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "model = CrossEncoder(MODEL_NAME, num_labels=1, device=device)\n",
+        "train_dataloader = DataLoader(train_examples, shuffle=True, batch_size=BATCH_SIZE)\n",
+        "loss_fn = losses.MSELoss(model=model)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Custom an evaluator to calculate F1-Score on dev set. Store model with the best performance on dev F1-Score."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sentence_transformers.evaluation import SentenceEvaluator\n",
+        "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
+        "import numpy as np\n",
+        "\n",
+        "class CustomCrossEncoderEvaluator(SentenceEvaluator):\n",
+        "    def __init__(self, examples, name=\"\"):\n",
+        "        self.examples = examples\n",
+        "        self.name = name\n",
+        "\n",
+        "    def __call__(self, model, output_path=None, epoch=-1, steps=-1):\n",
+        "        texts = [example.texts for example in self.examples]\n",
+        "        labels = [example.label for example in self.examples]\n",
+        "\n",
+        "        preds = model.predict(texts)\n",
+        "        preds_binary = (np.array(preds) > 0.5).astype(int)\n",
+        "\n",
+        "        accuracy = accuracy_score(labels, preds_binary)\n",
+        "        precision, recall, f1, _ = precision_recall_fscore_support(labels, preds_binary, average='binary')\n",
+        "\n",
+        "        print(f\"\\n[{self.name} Evaluation] Epoch {epoch}, Step {steps}:\")\n",
+        "        print(f\"Accuracy: {accuracy:.4f}, Precision: {precision:.4f}, Recall: {recall:.4f}, F1: {f1:.4f}\")\n",
+        "\n",
+        "        # Returning F1 for save_best_model criterion\n",
+        "        return f1"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "train and store model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Fine-tune\n",
+        "dev_evaluator = CustomCrossEncoderEvaluator(dev_examples, name=\"dev\")\n",
+        "\n",
+        "model.fit(\n",
+        "    train_dataloader=train_dataloader,\n",
+        "    epochs=NUM_EPOCHS,\n",
+        "    evaluator=dev_evaluator,\n",
+        "    evaluation_steps=1000,\n",
+        "    warmup_steps=int(0.1 * len(train_dataloader) * NUM_EPOCHS),\n",
+        "    output_path=str(FINAL_MODEL_DIR),\n",
+        "    save_best_model=True\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "use our fine-tuned model to re-rank test set for TOP_M evidences"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# --------- Rerank Test Set ---------\n",
+        "model = CrossEncoder(str(FINAL_MODEL_DIR), device=device)\n",
+        "\n",
+        "def rerank_and_save(top100_path, claims_path, evidences, out_dense_path, out_text_path):\n",
+        "    with open(top100_path, encoding='utf-8') as f:\n",
+        "        top100 = ujson.load(f)\n",
+        "    claims = load_claim_texts(claims_path)\n",
         "\n",
         "    dense_out = {}\n",
-        "    text_out  = {}\n",
+        "    text_out = {}\n",
         "\n",
-        "    print(f\"[{split}] Reranking with Cross-Encoder…\")\n",
-        "    for cid, entry in tqdm(top100.items(), desc=f\"{split} split\"):\n",
+        "    for cid, entry in tqdm(top100.items(), desc=\"Reranking\"):\n",
         "        cand_ids = entry[\"evidences\"] if isinstance(entry, dict) else entry\n",
-        "        claim    = claim_texts.get(cid, \"\")\n",
+        "        claim = claims.get(cid, \"\")\n",
+        "        pairs = [(claim, evidences[eid]) for eid in cand_ids]\n",
         "\n",
-        "        # Build (claim, evidence) pairs\n",
-        "        pairs = [(claim, evid_dict[eid]) for eid in cand_ids]\n",
+        "        scores = model.predict(pairs, batch_size=BATCH_SIZE)\n",
         "\n",
-        "        # Score\n",
-        "        scores = ce_model.predict(pairs, batch_size=BATCH_SIZE)\n",
-        "\n",
-        "        # Pick top-M\n",
         "        top_idx = scores.argsort()[-TOP_M:][::-1]\n",
         "        top_ids = [cand_ids[i] for i in top_idx]\n",
         "\n",
-        "        # --- dense (just IDs) ---\n",
         "        dense_out[cid] = top_ids\n",
-        "\n",
-        "        # --- text (with full evidence text + claim_text) ---\n",
         "        text_out[cid] = {\n",
         "            \"claim_text\": claim,\n",
-        "            \"ranked_evidences\": [\n",
-        "                {\"id\": eid, \"text\": evid_dict[eid]}\n",
-        "                for eid in top_ids\n",
-        "            ]\n",
+        "            \"ranked_evidences\": [{\"id\": eid, \"text\": evidences[eid]} for eid in top_ids]\n",
         "        }\n",
         "\n",
-        "    # Write outputs\n",
-        "    out_dense_path = DATA_DIR / f\"{split}-claims-top{TOP_M}-dense-ce.json\"\n",
-        "    out_text_path  = DATA_DIR / f\"{split}-claims-top{TOP_M}-text-ce.json\"\n",
+        "    with open(out_dense_path, \"w\", encoding=\"utf-8\") as f:\n",
+        "        json.dump(dense_out, f, ensure_ascii=False, indent=2)\n",
         "\n",
-        "    out_dense_path.write_text(\n",
-        "        json.dumps(dense_out, ensure_ascii=False, indent=2),\n",
-        "        encoding=\"utf-8\"\n",
-        "    )\n",
-        "    out_text_path.write_text(\n",
-        "        json.dumps(text_out, ensure_ascii=False, indent=2),\n",
-        "        encoding=\"utf-8\"\n",
-        "    )\n",
+        "    with open(out_text_path, \"w\", encoding=\"utf-8\") as f:\n",
+        "        json.dump(text_out, f, ensure_ascii=False, indent=2)\n",
         "\n",
-        "    print(f\"[{split}] → wrote {out_dense_path.name} and {out_text_path.name}\")"
+        "rerank_and_save(\n",
+        "    TEST_FN,\n",
+        "    DATA_DIR / \"test-claims.json\",\n",
+        "    evid_dict,\n",
+        "    DATA_DIR / f\"test-claims-top{TOP_M}-dense.json\",\n",
+        "    DATA_DIR / f\"test-claims-top{TOP_M}-text.json\"\n",
+        ")"
       ]
     },
     {
@@ -426,7 +621,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -440,7 +635,7 @@
         "from transformers import AutoModelForCausalLM, AutoTokenizer, BitsAndBytesConfig\n",
         "\n",
         "# ———— Config ————\n",
-        "TEST_CLAIMS_FILE = './data/test-claims-top6-text-fce.json'\n",
+        "TEST_CLAIMS_FILE = './data/test-claims-top6-text.json'\n",
         "RESULTS_FILE     = 'results.json'\n",
         "CHECKPOINT_FILE  = 'checkpoint.json'\n",
         "MODEL_NAME       = 'deepseek-ai/DeepSeek-R1-Distill-Qwen-7B'\n",
@@ -479,6 +674,13 @@
         "        \"evidences\": [\"evidence-1018575\", \"evidence-791159\"]\n",
         "    }\n",
         "}"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Some help functions"
       ]
     },
     {
@@ -606,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -672,9 +874,14 @@
         "        save_json(checkpoint, CHECKPOINT_FILE)\n",
         "\n",
         "        # pause\n",
-        "        time.sleep(0.5)\n",
-        "\n",
-        "    print(\"All done.\")"
+        "        time.sleep(0.5)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "one-shot inference"
       ]
     },
     {
